fix design on mobile

--- a/src/app/components/me/me.component.scss
+++ b/src/app/components/me/me.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  margin: 2rem 0;
+  margin: 2rem;
 
   .me__card {
 
@@ -10,7 +10,6 @@
       grid-auto-flow: row;
       justify-items: center;
       margin: 1rem 0;
-      width: 50%;
 
       color: var(--primary-color-rgba-60);
       font-size: 1.5rem;
