--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,5 +8,5 @@
 
     --background-primary-color: #f05053;
     --background-secondary-color: #062d7c;
-    --background-gradient: to left, #f05053, #062d7c;
+    --background-gradient: #f05053, #062d7c;
 }
